--- a/src/content/studio/org/members.mdx
+++ b/src/content/studio/org/members.mdx
@@ -10,15 +10,15 @@ Each organization member has one of the following roles:
 
 > If you're using member roles, [please let us know what you think!](https://docs.google.com/forms/d/10C4_ETX5Xb60RfnJjBC2xBVK9gjr6A644AYKA-27T-E/viewform) Your feedback will help us improve the feature before we roll it out to all organizations.
 
-| Name                     | Description                                                                                                                                                                                                                                                                                                          | Supported [plan types](https://www.apollographql.com/pricing/) |
-| ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
-| **Org Admin**              | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                  |                              All                               |
-| **Graph Admin**            | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                          |                        Enterprise only                         |
-| **Contributor**            | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](./graphs/#protected-variants-enterprise-only).                                              |                        Enterprise only                         |
-| **Documenter**             | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                          |                        Enterprise only                         |
-| **Observer**               | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                   |                        Enterprise only                         |
+| Name                       | Description                                                                                                                                                                                                                                                                                                            | Supported [plan types](https://www.apollographql.com/pricing/) |
+| -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
+| **Org Admin**              | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                    |                              All                               |
+| **Graph Admin**            | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                            |                        Enterprise only                         |
+| **Contributor**            | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graph-access-permissions#protected-variants-enterprise-only).                                                |                        Enterprise only                         |
+| **Documenter**             | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                  |                        Enterprise only                         |
+| **Observer**               | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                     |                        Enterprise only                         |
 | **Consumer** (free)        | <p>Has view-only access to the organization's graph _schemas_, but not metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.</p><p>This role is available to all plan types, including Free. **Consumer** members do not count as billed users.</p> |                              All                               |
-| **Billing Manager** (free) | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. **Billing Manager** members do not count as billed users.</p>                       |                       Enterprise & Team                        |
+| **Billing Manager** (free) | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. **Billing Manager** members do not count as billed users.</p>                       |                Enterprise, Serverless, and Team                |
 
 Only members with the **Org Admin** role can assign roles to other members. You can see which role you have in a particular organization from your [user settings page](https://studio.apollographql.com/user-settings), or from the organization's Members tab.
 
@@ -30,7 +30,7 @@ You can override a member's organization-wide role for individual graphs. For ex
 
 Members with the **Graph Admin** or **Org Admin** role can assign graph-specific roles from the Access tab of the graph's Settings page.
 
-If a graph is made [hidden](./graphs/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
+If a graph is made [hidden](../graph-access-permissions/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
 
 The **Graph Admin** and **Org Admin** roles have exactly the same permissions for a particular graph, so you can only grant a **Graph Admin** override, not an (equivalent) **Org Admin** override.
 
@@ -38,30 +38,30 @@ When **Contributor**s in an organization create a new graph, they are automatica
 
 ## Role permissions
 
-| Action                                                 | Org Admin | Graph Admin |                                 Contributor                                 | Observer / Documenter | Consumer |
-| :----------------------------------------------------- | :-------: | :---------: | :-------------------------------------------------------------------------: | :------: | :------: |
-| Invite members                                         |     ✓     |             |                                                                             |          |          |
-| Remove members                                         |     ✓     |             |                                                                             |          |          |
-| View and edit billing information                      |     ✓     |             |                                                                             |          |          |
-| Manage organization configuration (name, avatar, etc.) |     ✓     |             |                                                                             |          |          |
-| Delete the organization                                |     ✓     |             |                                                                             |          |          |
-| Manage which users have access to graphs               |     ✓     |      ✓      |                                                                             |          |          |
-| Manage graph integrations (Datadog, Slack, etc.)       |     ✓     |      ✓      |                                                                             |          |          |
-| View and manage graph API keys                         |     ✓     |      ✓      |                                                                             |          |          |
-| Modify schema checks configuration                     |     ✓     |      ✓      |                                                                             |          |          |
-| Delete and rename graphs                               |     ✓     |      ✓      |                                                                             |          |          |
-| Create and modify [contracts](../contracts/) and contract variants  |     ✓     |      ✓      |                                                                             |          |          |
-| View existing contracts  |     ✓     |      ✓      | ✓                                                                           |          |          |
-| Create new variants                                    |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
-| Push schemas to a graph                                |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
-| Manage Explorer settings (URL, etc)                    |     ✓     |      ✓      | Non-[protected](./graphs/#protected-variants-enterprise-only) variants only |          |          |
-| Create [Deployed Graphs](./graphs/)                    |     ✓     |      ✓      |                                      ✓                                      |          |          |
-| Edit variant READMEs                  |     ✓     |      ✓      |                                      ✓                                      |    Documenter only     |          |
-| Run [schema checks](../schema-checks)                  |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
-| See the schemas of subgraphs in federated graphs       |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
-| View graph usage metrics and traces                    |     ✓     |      ✓      |                                      ✓                                      |    ✓     |          |
-| View graph schemas and changelogs                      |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
-| Query graphs with the Explorer                         |     ✓     |      ✓      |                                      ✓                                      |    ✓     |    ✓     |
+| Action                                                             | Org Admin | Graph Admin |                                 Contributor                                 | Observer / Documenter | Consumer |
+| :----------------------------------------------------------------- | :-------: | :---------: | :-------------------------------------------------------------------------: | :-------------------: | :------: |
+| Invite members                                                     |     ✓     |             |                                                                             |                       |          |
+| Remove members                                                     |     ✓     |             |                                                                             |                       |          |
+| View and edit billing information                                  |     ✓     |             |                                                                             |                       |          |
+| Manage organization configuration (name, avatar, etc.)             |     ✓     |             |                                                                             |                       |          |
+| Delete the organization                                            |     ✓     |             |                                                                             |                       |          |
+| Manage which users have access to graphs                           |     ✓     |      ✓      |                                                                             |                       |          |
+| Manage graph integrations (Datadog, Slack, etc.)                   |     ✓     |      ✓      |                                                                             |                       |          |
+| View and manage graph API keys                                     |     ✓     |      ✓      |                                                                             |                       |          |
+| Modify schema checks configuration                                 |     ✓     |      ✓      |                                                                             |                       |          |
+| Delete and rename graphs                                           |     ✓     |      ✓      |                                                                             |                       |          |
+| Create and modify [contracts](../contracts/) and contract variants |     ✓     |      ✓      |                                                                             |                       |          |
+| View existing contracts                                            |     ✓     |      ✓      |                                      ✓                                      |                       |          |
+| Create new variants                                                |     ✓     |      ✓      | Non-[protected](../graph-access-permissions#protected-variants-enterprise-only) variants only |                       |          |
+| Push schemas to a graph                                            |     ✓     |      ✓      | Non-[protected](../graph-access-permissions#protected-variants-enterprise-only) variants only |                       |          |
+| Manage Explorer settings (URL, etc)                                |     ✓     |      ✓      | Non-[protected](../graph-access-permissions#protected-variants-enterprise-only) variants only |                       |          |
+| Create [Deployed Graphs](./graphs/)                                |     ✓     |      ✓      |                                      ✓                                      |                       |          |
+| Edit variant READMEs                                               |     ✓     |      ✓      |                                      ✓                                      |    Documenter only    |          |
+| Run [schema checks](../schema-checks)                              |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
+| See the schemas of subgraphs in federated graphs                   |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
+| View graph usage metrics and traces                                |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
+| View graph schemas and changelogs                                  |     ✓     |      ✓      |                                      ✓                                      |           ✓           |    ✓     |
+| Query graphs with the Explorer                                     |     ✓     |      ✓      |                                      ✓                                      |           ✓           |    ✓     |
 
 > Currently, graph usage metrics and traces are not displayed to **Consumer**s via the Studio web app, but they are not blocked at the API layer. We intend to remove this capability from **Consumer**s, but for the time being you should understand that **Consumer**s are not fully prevented from accessing these metrics and traces.
 
