--- a/src/content/studio/org/account.mdx
+++ b/src/content/studio/org/account.mdx
@@ -1,5 +1,5 @@
 ---
-title: Managing your user account
+title: Managing your Studio user account
 ---
 
 ## Creating your account
@@ -18,8 +18,7 @@ you will also be asked to [create an organization](./organizations/) as part of 
 
 ## Personal API keys
 
-You can create API keys for your user account on your [Personal Settings page](https://studio.apollographql.com/user-settings).
-User keys can be useful when configuring the Apollo CLI and VS Code extension; with a single key, you can pull data from all your graphs and organizations in Studio.
+You can create API keys for your user account on your [Personal Settings page](https://studio.apollographql.com/user-settings). A user API key can be useful when configuring the Rover CLI or the Apollo VS Code extension. The key has the same permissions as your user account, which means you can use it to interact with all of your organizations and graphs in Studio.
 
 ## Deleting your account
 
