--- a/src/content/studio/org/graphs.mdx
+++ b/src/content/studio/org/graphs.mdx
@@ -1,39 +1,81 @@
 ---
-title: Graphs and variants
-description: In Apollo Studio
+title: Understanding graphs
+description: The heart of Apollo GraphOS
 ---
 
-A **graph** in Apollo Studio represents a unified graph in your organization. Each graph has one or more **variants**, which correspond to the different environments where that graph runs (such as staging and production). Each variant has its own GraphQL schema, which means schemas can differ between environments.
+As its name suggests, **GraphOS** is a platform for building and managing **graphs**. Each graph corresponds to a GraphQL service in your organization.
 
-## Creating a graph
+A GraphQL service usually runs in more than one environment (such as staging or production), so every graph in GraphOS has one or more **variants** that each correspond to one environment:
 
-To create a graph in [Apollo Studio](https://studio.apollographql.com/), click **New Graph** in the top right. The following dialog appears:
+```mermaid
+graph TB;
+  subgraph "A graph in GraphOS";
+    direction LR
+    staging(Staging<br/>variant);
+    production(Production<br/>variant);
+  end;
+```
 
-<img
-  className="screenshot"
-  src="../img/graph-creation.jpg"
-  width="400"
-  style="margin-bottom: 20px;"
-/>
+Each variant of a graph keeps track of its own separate GraphQL schemas and operation metrics.
 
-There are two types of **graph architectures** in Studio:
+## Cloud supergraphs
 
-* **Supergraph** - This is any graph that uses [Apollo Federation](/federation/), consisting of a gateway and one or more subgraphs.
-* **Monolith** - This is any graph that _doesn't_ use Apollo Federation, consisting of a single GraphQL server.
+Most of the graphs you create with GraphOS are called **cloud supergraphs**. For every variant of a cloud supergraph, GraphOS provisions and manages a serverless **cloud router** that acts as the graph's public endpoint. Application clients communicate with this endpoint instead of communicating directly with your API:
 
-## Registering a schema
+```mermaid
+flowchart LR;
+  clients(Clients);
+  subgraph "GraphOS";
+  router(["Serverless<br/>cloud router"]);
+  end;
+  subgraph "Your infrastructure";
+  api[Your GraphQL API];
+  router --- api
+  end;
+  clients -.- router;
+  class clients secondary;
+```
 
-You can register your schema to a Studio graph with one of the following methods:
+The cloud router automatically reports certain operation metrics to GraphOS, so you don't need to configure this reporting in your GraphQL servers.
 
-* [Using the Rover CLI](../schema/cli-registration/)
-* [Using schema reporting](../schema/schema-reporting/) (monolith graphs only)
+> [Learn more about cloud routing.](../cloud-routing/overview/)
 
-## Viewing graph information
+Cloud supergraphs use an architecture called [Apollo Federation](/federation/). With federation, you can distribute your graph's capabilities across _multiple_ GraphQL services, which are known as **subgraphs**. The cloud router can execute client operations across multiple subgraphs as needed:
 
-After selecting an organization in Studio, click on a particular graph
-to view its editable README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
+```mermaid
+flowchart LR;
+  clients(Clients);
+  subgraph "GraphOS";
+  router(["Serverless<br/>cloud router"]);
+  end;
+  subgraph "Your infrastructure";
+  products[Products subgraph];
+  reviews[Reviews subgraph]
+  router --- products & reviews
+  end;
+  clients -.- router;
+  class clients secondary;
+```
 
-> Enterprise accounts can set [member roles](./members/#organization-wide-member-roles) to configure access for individual members of their organization.
+Even if your API currently uses only _one_ GraphQL server, a cloud supergraph helps you add more subgraphs later as your organization grows.
+
+> **If you need to host your supergraph's router in your own infrastructure** (this isn't necessary for most organizations), you might benefit from an Enterprise plan. Please [contact us](https://www.apollographql.com/contact-sales/).
+>
+> Alternatively, you can create a [classic graph](#classic-graphs) instead of a cloud supergraph. Classic graphs are _not_ recommended except for use cases that require them.
+
+### Creating a cloud supergraph
+
+To learn how to create a cloud supergraph with Apollo Studio, see the [quickstart](../getting-started/).
+
+## Publishing schemas
+
+See [Publishing schemas to GraphOS](../schema/cli-registration/).
+
+## Viewing graph details
+
+After selecting an organization in Apollo Studio, click on a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
+
+> Enterprise accounts can set [member roles](./members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
 
 ### The README page
 
@@ -50,7 +92,7 @@ Like the typical homepage for a Git repository, this page displays a Markdown-ba
 
 > **Note:** Only organization members with the [**Org Admin**, **Graph Admin**, **Contributor**, or **Documenter** role](./members/) can edit a variant's README. If a variant is [protected](#protected-variants-enterprise-only), **Contributor**s _cannot_ edit its README.
 
-**Each variant has its own README.** If you edit one variant's README, those edits are _not_ applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](#public-variants).
+**Each variant has its own README.** If you edit one variant's README, those edits are _not_ applied to other variants. Among other uses, this enables you to provide different information to external consumers in a [public variant](../graph-access-permissions/#public-variants).
 
 #### Supported Markdown
 
@@ -136,6 +178,7 @@ The top of the Schema page provides a **Filter Schema** box you can use to find 
   className="screenshot"
   alt="Schema page filter box and dropdowns"
   src="../img/schema-page-filters.jpg"
+  width="600"
 />
 
 > * Click the arrow button to the left of the filter box to show/hide the filter selection dropdowns.
@@ -271,11 +314,11 @@ The Changelog page in Studio displays a timeline of changes made to your graph's
   width="450"
 />
 
-**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema registration in your continuous delivery pipeline](../schema/cli-registration/#registering-with-continuous-delivery).
+**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../schema/cli-registration/#publishing-with-continuous-delivery).
 
-## Managing variants
+## Variants
 
-To distinguish between instances of the same graph running in different environments (such as staging and production), you can define **variants** for a deployed graph. Each variant has its own schema, along with its own change history and metrics:
+To distinguish between instances of the same graph running in different environments (such as staging and production), you define multiple **variants** of your graph. Each variant has its own schema, along with its own change history and metrics:
 
 <img
   src="../img/graph-variants.jpg"
@@ -286,90 +329,116 @@ To distinguish between instances of the same graph running in different environm
 
 ### Adding a variant
 
-To add a variant to your graph, you [register a schema](#registering-a-schema) to the graph and include a variant name in the registration. If a variant with the specified name doesn't exist yet, Studio creates it.
+To add a variant to your graph, you [publish a schema](../schema/cli-registration) to the graph and include the variant's name in the command. If a variant with the specified name doesn't exist yet, Studio creates it!
 
-### Associating metrics with a variant
+## Graph administration
 
-You can configure Apollo Server to associate the metrics it sends to Apollo Studio with a particular variant. To do so, set the `APOLLO_GRAPH_REF` environment variable to the appropriate variant before initializing Apollo Server.
-
-For example, to associate metrics with the `production` variant of the `docs-example-graph` graph:
-
-```bash
-APOLLO_GRAPH_REF=docs-example-graph@production
-```
-
-> Make sure you associate metrics with the correct variant! Otherwise, metrics from your staging and test environments might be included in reports for your production graph.
-
-### Public variants
-
-You can enable public access for individual variants of your graph. If you do, **anyone with that variant's public link** can view the following pages for that variant in Studio:
-
-- Home
-- Schema
-- Explorer
-  - You can also [embed the Explorer](../explorer/embed-explorer/) on your own webpage.
-
-This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
-
-People outside your organization can't view any _other_ pages for a public variant (Fields, Operations, etc.), and they can never view _any_ pages for private variants. New variants always start as private.
-
-#### Making a variant public
-
-> Only organization members with the [**Org Admin** or **Graph Admin** role](./members/) can toggle a variant's public visibility.
-
-1. Go to your variant's Settings page and open the **This Variant** tab.
-2. Find the Public card and click **Change**:
-
-   <img
-     class="screenshot"
-     src="../img/toggle-public-protected-variant.png"
-     alt="Toggle public variant in Studio"
-     width="400"
-   />
-
-3. Toggle your selection and click **Save**.
-
-You can toggle the switch back to **Off** to make the variant private again.
-
-After you make a variant public, you can click the variant's **PUBLIC** label at the top of Apollo Studio to get its public link:
-
-<img
-  className="screenshot"
-  src="../img/public-variant-label.jpg"
-  alt="Public variant label in Studio"
-  width="400"
-/>
-
-### Protected variants (Enterprise only)
-
-If you have an Enterprise plan, you can designate particular variants of a graph as **protected variants**. Making a variant protected specifically affects the ability of users with the [**Contributor** role](./members/#organization-wide-member-roles) to make certain changes to the variant:
-
-- **Contributor**s _cannot_ push schema updates to a protected variant.
-- **Contributor**s _cannot_ manage Explorer-related settings for a protected variant, like setting its URL.
-- Graph API Keys with the **Contributor** permission _cannot_ report usage metrics to your graph.
-
-These are the only operations (other than creating new protected variants and creating new graphs) that can be performed by **Contributor**s and not by **Observer**s, so one way of thinking of protected variants are that they are variants where **Contributor**s are treated as **Observer**s.
-
-**Graph Admin**s and **Org Admin**s can configure whether a variant is protected from the **This Variant** tab of the variant's Settings page.
-
-## Internal graph visibility (Enterprise only)
-
-> For _external_ graph visibility, see [Public variants](#public-variants).
-
-By default, deployed graphs are visible to all members of your organization. If you have an Enterprise plan, you can set a deployed graph to instead be visible only to members you invite.
-
-You can configure visibility and grant your organization's members explicit access to your graph from the Access tab of your graph's Settings page.
-
-Note that **Org Admin**s can always see _all_ graphs in your organization.
-
-## Transferring graph ownership
+### Transferring ownership
 
 You can transfer a graph to a different Studio organization you belong to
 by visiting the graph's Settings page and changing the **graph owner**.
 
-## Deleting a graph
+### Deleting a graph
 
-> **Deleting a graph cannot be undone!**
+> ⚠️ **Deleting a graph cannot be undone!**
+>
+> If you delete a cloud supergraph, all of its GraphOS-managed routers are **deprovisioned**.
 
 You can delete a graph from Studio by visiting its Settings page and clicking
 **Delete Graph**.
+
+## Classic graphs
+
+In addition to creating [cloud supergraphs](#cloud-supergraphs), you can create **classic graphs** in Apollo Studio.
+
+> ⚠️ **Classic graphs are not recommended for most organizations.** Deploying and maintaining your own router can introduce unnecessary complexity to your graph. Create a classic graph only if your use case requires hosting your router in your own infrastructure.
+
+Classic graphs do _not_ include an Apollo-managed router. This means if you have a [federated graph](/federation/), you need to deploy, configure, and manage its router yourself:
+
+```mermaid
+flowchart LR;
+  clients(Clients);
+  subgraph "Your infrastructure"
+  router(["Router"]);
+  serviceA[Products subgraph];
+  serviceB[Reviews subgraph];
+  router --- serviceA & serviceB;
+  end;
+  clients -.- router;
+  class clients secondary;
+```
+
+Your self-managed router is usually an instance of the [Apollo Router](/router/) (cloud supergraphs use the Apollo Router under the hood).
+
+Alternatively, classic graphs can consist of a single GraphQL server with _no_ router (also known as a **monograph**):
+
+```mermaid
+flowchart LR;
+  clients(Clients);
+  subgraph "Your infrastructure"
+  server[GraphQL server];
+  end;
+  clients -.- server;
+  class clients secondary;
+```
+
+A monograph often introduces scaling issues as it grows in complexity. We _strongly_ recommend a federated architecture for all business-critical graphs.
+
+### Creating a classic graph
+
+> ⚠️ **Classic graphs are not recommended for most organizations.** Deploying and maintaining your own router can introduce unnecessary complexity to your graph. Create a classic graph only if your use case requires hosting your router in your own infrastructure.
+
+1. Go to your organization's **Supergraphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+
+    - **If you see this dialog...**
+
+        <img
+          src="../img/studio-welcome.jpg"
+          class="screenshot"
+          alt="Welcome message for new Studio orgs"
+          width="400"
+        />
+
+        ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
+
+    - **Otherwise,** find the following notice in the bottom-right corner of the page:
+
+        <img
+          src="../img/classic-graph-flow.jpg"
+          class="screenshot"
+          alt="Link to classic graph flow"
+          width="300"
+        />
+
+        Click **Head over to our classic graph flow**.
+
+    In either case, Studio displays the following dialog for creating a classic graph:
+
+    <img
+      className="screenshot"
+      src="../img/graph-creation.jpg"
+      width="350"
+      style="margin-bottom: 20px;"
+    />
+
+2. Specify an organization and title for your graph.
+
+3. Specify your **Graph Architecture**:
+
+    * If your graph uses [Apollo Federation](/federation/), leave this as **Supergraph (default)**.
+    * Otherwise (i.e., your graph consists of a single GraphQL server), switch this to **Monolith**.
+
+4. Click **Next**. A dialog like the following appears (the details differ depending on which **Graph Architecture** you're using):
+
+    <img
+     src="../img/register-schema-dialog.jpg"
+     class="screenshot"
+     alt="Schema registration options"
+     width="500"
+    />
+
+5. **If you're using Apollo Federation,** select the version of federation you're using from the **Supergraph Pipeline Track** dropdown.
+
+Your classic graph has been created, and your Studio organization now includes a **Classic Graphs** tab in addition to its **Supergraphs** tab.
+
+Next, you need to publish your classic graph's schema to Apollo using the Rover CLI. For details, see [Publishing schemas to Apollo Studio](../schema/cli-registration).
