--- a/src/content/studio/schema/cli-registration.mdx
+++ b/src/content/studio/schema/cli-registration.mdx
@@ -1,29 +1,78 @@
 ---
-title: Schema registration via the Rover CLI
+title: Publishing schemas to GraphOS
+description: Using the Rover CLI
 ---
 
 import RegisterCli from '../../shared/register-cli.mdx';
-import RegisterFederatedCli from '../../shared/register-federated-cli.mdx';
 
-If you're using a GraphQL server that doesn't support [schema reporting](./schema-reporting/), you can register your schema via the [Rover CLI](https://www.apollographql.com/docs/rover/).
+Whenever you make changes to a graph's schema, you should **publish** those changes to Apollo GraphOS using the Rover CLI. Doing so ensures that Apollo always has an up-to-date understanding of your graph.
 
-> **Do not use both schema reporting and Rover to register schemas for the same graph.** Doing so can cause you to register "no-op" schema changes that are semantically identical but cosmetically different.
+> ⚠️ **If you haven't installed Rover yet:**
+> 1.  <a href="https://www.apollographql.com/docs/rover/getting-started/" target="_blank">Install the Rover CLI.</a>
+> 2. <a href="https://www.apollographql.com/docs/rover/configuring/" target="_blank">Authenticate Rover</a> with Apollo Studio.
 
-## Registering a non-federated schema
+## Subgraph schemas
 
-<RegisterCli />
+Every supergraph in Apollo Studio includes one or more subgraphs. You _individually_ publish each subgraph's schema to Apollo with `rover subgraph publish`:
 
-## Registering federated schemas
+```bash
+rover subgraph publish --schema ./products.graphql --name products docs-example-graph@current
+```
 
-See [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
+```mermaid
+graph LR;
+  subgraph " "
+  subgraphA[Products<br/>subgraph];
+  subgraphB[Reviews<br/>subgraph];
+  subgraphC[Inventory<br/>subgraph];
+  end
+  graphos{{GraphOS}};
+  subgraphA & subgraphB & subgraphC -. rover subgraph publish  .-> graphos;
+  class graphos secondary;
+```
 
-## Registering with continuous delivery
+**To publish a subgraph schema to Apollo:**
 
-To get the most out of Studio, you should **register each update to your production schema as soon as it occurs**. Consequently, schema registration should be part of your continuous delivery pipeline.
+1. Identify the name of the subgraph you're publishing to. You can view the names of your existing subgraphs from your variant's **Subgraphs** page in Studio.
 
-Here's a sample continuous delivery configuration for CLI-based schema registration using CircleCI:
+2. **If you're publishing a subgraph for the first time,** _also_ obtain the **routing URL** for that subgraph. This is the URL that your router will use to communicate with the subgraph.
+    - If Studio already knows your subgraph's routing URL, you don't need to provide this value unless you're changing it.
 
-```yaml {13,29-31}
+2. Run the `rover subgraph publish` command and provide it your subgraph's schema in one of the ways shown:
+
+    ```bash
+    # Provide a local .graphql file path
+    rover subgraph publish my-graph@my-variant --name locations --routing-url https://flyby-locations-sub.herokuapp.com/ --schema ./schema.graphql
+
+    # Provide an introspection result via stdin
+    rover subgraph introspect http://localhost:4000 | rover subgraph publish my-graph@my-variant --name locations --routing-url https://flyby-locations-sub.herokuapp.com/ --schema -
+    ```
+
+Whenever you publish a subgraph schema, GraphOS attempts to **compose** all latest versions of your subgraph schemas into a single **supergraph schema** for your router:
+
+```mermaid
+graph TB;
+  serviceA[Subgraph<br/>schema<br/>A];
+  serviceB[Subgraph<br/>schema<br/>B];
+  serviceC[Subgraph<br/>schema<br/>C];
+  composition[["🛠<br/>Composition "]];
+  supergraph{{"Supergraph schema<br/>(A + B + C + routing machinery)"}};
+  serviceA & serviceB & serviceC --> composition;
+  composition -- "(Composition succeeds)" --> supergraph;
+  class composition tertiary;
+```
+
+If this composition succeeds, your router is updated with the result. This enables clients to query any newly added fields, and it _prevents_ them from querying any _removed_ fields.
+
+> You can manually fetch your router's latest supergraph schema with the `rover supergraph fetch` command, or retrieve it from your supergraph's **Schema > SDL** page in Apollo Studio.
+
+## Publishing with continuous delivery
+
+To get the most out of GraphOS, you should **publish each update to any production schema as soon as it occurs**. Consequently, schema publishing should be part of your continuous delivery pipeline.
+
+Here's a sample continuous delivery configuration for schema publishing in CircleCI:
+
+```yaml
 version: 2
 
 jobs:
@@ -38,12 +87,15 @@ jobs:
 
       - run:
           name: Install Rover
+          # highlight-start
           command: |
-            # download and install Rover
-            curl -sSL https://rover.apollo.dev/nix/v0.3.0 | sh
+            # Download and install Rover
+            # This is pinned to a specific version for predictability in CI
+            curl -sSL https://rover.apollo.dev/nix/v0.8.1 | sh
 
             # This allows the PATH changes to persist to the next `run` step
             echo 'export PATH=$HOME/.rover/bin:$PATH' >> $BASH_ENV
+          # highlight-end
 
       # Start the GraphQL server.  If a different command is used to
       # start the server, use it in place of `npm start` here.
@@ -56,10 +108,20 @@ jobs:
       # commands against it
       - run: sleep 5
 
+      # highlight-start
       # When running on the 'main' branch, push the latest version
       # of the schema to Apollo Studio.
       - run: |
           if [ "${CIRCLE_BRANCH}" == "main" ]; then
-            rover graph publish my-graph@my-variant --schema ./schema.graphql
+            rover subgraph publish my-graph@my-variant \
+              --schema ./schema.graphql \
+              --name locations
           fi
+      # highlight-end
 ```
+
+## Monolith schemas
+
+> ⚠️ These instructions apply only to monolith [classic graphs](../org/graphs/#classic-graphs), which are **not recommended**.
+
+<RegisterCli />
